--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
     <button id="led2onbutton"  onclick="switchLED(2,1)">LED 2 On</button>
     <button id="led2offbutton"  onclick="switchLED(2,0)">LED 2 Off</button>
     <br><br>
+  
+    <input id="fname" onkeyup="getVal()" type="text" name="filter_name" value="" onclick="this.value = &#39;&#39;;" onkeydown="this.style.color = &#39;#000000&#39; " style="width:180px;">
+    
+    <div id="icard" class="drag" style="left: 0px; top: 0px; width:10%;  height:10%;"></div>
+
     <script type="text/javascript">
+
+      function getVal() {
+        var x = document.getElementById("fname");
+        document.getElementById("icard").innerHTML = x.value.toUpperCase();
+      }
+
       var deviceID    = "55ff6d065075555315131787";
       var accessToken = "51527695cb8e07ea6c8858efa85011a8bfe594a5";
       var setFunc = "led";
@@ -35,17 +46,42 @@
         }
       }
 
-
       function switchLED(ledn,newValue) {
         var paramStr = "l" + ledn.toString();
         if (newValue==1) { 
-           paramStr = paramStr + ",HIGH";
+          paramStr = paramStr + ",HIGH";
         } else {
           paramStr = paramStr + ",LOW";
         }
         var requestURL = "https://api.spark.io/v1/devices/" +deviceID + "/" + setFunc + "/";
         $.post( requestURL, { params: paramStr, access_token: accessToken });
       }
+
+      function updateTime() {
+        var currentTime = new Date();
+        var hours = currentTime.getHours();
+        var minutes = currentTime.getMinutes();
+        var seconds = currentTime.getSeconds();
+        if (minutes < 10){
+          minutes = "0" + minutes;
+        }
+        if (seconds < 10){
+          seconds = "0" + seconds;
+        }
+        var v = hours + ":" + minutes + ":" + seconds + " ";
+        if(hours > 11){
+          v+="PM";
+        } else {
+          v+="AM"
+        }
+        setTimeout("updateTime()",1000);
+        document.getElementById('time').innerHTML=v;
+      }
+      updateTime();
+
     </script>
+  <body>
+    <h4>Current Time: <span id="time"/></h4>
+  </body>
 </body>
 </html>
