--- a/index.html
+++ b/index.html
@@ -4,29 +4,43 @@
 <body>
 
     <br><br>
-    <button id="led1onbutton"  onclick="switchLED(1,1)">LED 1 On</button>
-    <button id="led1offbutton"  onclick="switchLED(1,0)">LED 1 Off</button>
+    <button type="button" onClick="onClick1()" id="led1onbutton" onclick="switchLED(1,1)">LED 1 On</button>
+    <button type="button" onClick="onClick2()" id="led1offbutton"  onclick="switchLED(1,0)">LED 1 Off</button>
     <br><br>
-    <button id="led2onbutton"  onclick="switchLED(2,1)">LED 2 On</button>
-    <button id="led2offbutton"  onclick="switchLED(2,0)">LED 2 Off</button>
+    <button type="button" onClick="onClick3()" id="led2onbutton"  onclick="switchLED(2,1)">LED 2 On</button>
+    <button type="button" onClick="onClick4()" id="led2offbutton"  onclick="switchLED(2,0)">LED 2 Off</button>
     <br><br>
-  
-    <input id="fname" onkeyup="getVal()" type="text" name="filter_name" value="" onclick="this.value = &#39;&#39;;" onkeydown="this.style.color = &#39;#000000&#39; " style="width:180px;">
-    
-    <div id="icard" class="drag" style="left: 0px; top: 0px; width:10%;  height:10%;"></div>
 
     <script type="text/javascript">
-
-      function getVal() {
-        var x = document.getElementById("fname");
-        document.getElementById("icard").innerHTML = x.value.toUpperCase();
-      }
 
       var deviceID    = "55ff6d065075555315131787";
       var accessToken = "51527695cb8e07ea6c8858efa85011a8bfe594a5";
       var setFunc = "led";
+      
+      var clicks1 = 0;
+      var clicks2 = 0;
+      var clicks3 = 0;
+      var clicks4 = 0;
 
+      function onClick1() {
+        clicks1 += 1;
+        document.getElementById("clicks1").innerHTML = clicks1;
+      };
 
+      function onClick2() {
+        clicks2 += 1;
+        document.getElementById("clicks2").innerHTML = clicks2;
+      };
+
+      function onClick3() {
+        clicks3 += 1;
+        document.getElementById("clicks3").innerHTML = clicks3;
+      };
+
+      function onClick4() {
+        clicks4 += 1;
+        document.getElementById("clicks4").innerHTML = clicks4;
+      };
 
       document.onkeydown = function(evt) {
         evt = evt || window.event;
@@ -81,6 +95,10 @@
 
     </script>
   <body>
+    <p>LED1 ON: <a id="clicks1">0</a></p>
+    <p>LED1 OFF: <a id="clicks2">0</a></p>
+    <p>LED2 ON: <a id="clicks3">0</a></p>
+    <p>LED2 OFF: <a id="clicks4">0</a></p>
     <h4>Current Time: <span id="time"/></h4>
   </body>
 </body>
