--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <script type="text/javascript">
 
-      var deviceID    = "53ff70066667574856492467";
-      var accessToken = "82dffc805d586cdf3225858f57cb0c17637feae6";
+      var deviceID    = "";// here goes the device ID
+      var accessToken = "";// here goes the access token of spark core or photon
       var setFunc = "led";
       
       var clicks1 = 0;
